# mcp-servers

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy_servers.sh  pyproject.toml  ruff.toml
antvis-chart-mcp-server/: .gitignore  README.md  antvis-chart-mcp-server-checklist.md  package-lock.json  package.json
apify-mcp-server-sdk/: README.md  pyproject.toml
apify-mcp-server-sdk/examples/: remote_server.py  simple_calculator.py  slidespeak_with_whitelist.py
apify-mcp-server-sdk/src/apify_mcp_server_sdk/: __init__.py  base_main.py  config.py  event_store.py  mcp_gateway.py  models.py  server.py
brave-search-mcp-server/: README.md  package-lock.json  package.json
browserbase-mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
calculator-MCP-server/: README.md  requirements.txt
chart-MCP-server/: README.md  package-lock.json  package.json
context7-mcp-server/: README.md
deepl-mcp-server/: README.md  package-lock.json  package.json
dictionary-mcp-server/: README.md  requirements.txt
docfork-mcp-server/: README.md
everart-mcp-server/: README.md  package-lock.json  package.json
exa-mcp-server/: README.md  package-lock.json  package.json
explorium-mcp-server/: README.md  explorium-mcp-server-checklist.md  package-lock.json  package.json
fetchserp-mcp-server/: Dockerfile  README.md  package-lock.json  package.json
financial-datasets-mcp-server/: README.md  financial-datasets-mcp-server-checklist.md  requirements.txt  server.py
firecrawl-mcp-server/: README.md  package-lock.json  package.json
flightradar24-mcp-server/: Dockerfile  README.md  all_code_combined.txt  package-lock.json  package.json  tsconfig.json
forevervm-mcp-server/: .gitignore  .prettierrc  Dockerfile  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
kiwi-mcp-server/: README.md  requirements.txt
lara-translate-mcp-server/: README.md  package-lock.json  package.json
microsoft-learn-mcp-server/: README.md  microsoft-docs-mcp-server-checklist.md  package-lock.json  package.json
mindmap-mcp-server/: Dockerfile  README.md  requirements.txt
n8n-documentation-mcp-server/: .gitignore  README.md  SPECIFICATION.md  all_code_combined.txt  package-lock.json  (+1 more)
(+328 files in other folders)
